# forgemax

./: .gitignore  .mcp.json.bak  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  UPGRADE.md  deny.toml  forge.toml  forge.toml.example  forge.toml.example.production  install.ps1  install.sh  test-v031-prompt.md
.github/workflows/: build-binaries.yml  ci.yml  release.yml
crates/forge-audit/: Cargo.toml
crates/forge-audit/src/: lib.rs
crates/forge-cli/: Cargo.toml  build.rs
crates/forge-cli/src/: common.rs  main.rs
crates/forge-cli/src/cmd/: doctor.rs  init.rs  manifest.rs  run.rs  serve.rs
crates/forge-cli/tests/: cli_integration.rs
crates/forge-client/: Cargo.toml
crates/forge-client/src/: circuit_breaker.rs  lib.rs  router.rs  timeout.rs
crates/forge-client/tests/: end_to_end.rs
crates/forge-config/: Cargo.toml
crates/forge-config/src/: lib.rs  watcher.rs
crates/forge-error/: Cargo.toml
crates/forge-error/src/: lib.rs
crates/forge-manifest/: Cargo.toml  build.rs
crates/forge-manifest/src/: forge.d.ts  lib.rs  live.rs
crates/forge-sandbox/: Cargo.toml
crates/forge-sandbox-worker/: Cargo.toml
crates/forge-sandbox-worker/src/: main.rs
crates/forge-sandbox/src/: ast_validator.rs  audit.rs  error.rs  executor.rs  groups.rs  host.rs  ipc.rs  lib.rs  metrics.rs  ops.rs  pool.rs  redact.rs  stash.rs  validator.rs
crates/forge-sandbox/tests/: ast_validation.rs  child_process.rs  example_validation.rs  security_integration.rs  worker_pool.rs
crates/forge-server/: Cargo.toml
crates/forge-server/src/: lib.rs
crates/forge-server/tests/: integration.rs
crates/forge-test-server/: Cargo.toml
crates/forge-test-server/src/: main.rs
homebrew/: forgemax.rb
npm/: install.js  package.json
scoop/: forgemax.json
