[workspace]
resolver = "2"
members = [
    "crates/forge-cli",
    "crates/forge-sandbox",
    "crates/forge-sandbox-worker",
    "crates/forge-manifest",
    "crates/forge-server",
    "crates/forge-client",
    "crates/forge-config",
    "crates/forge-error",
    "crates/forge-audit",
    "crates/forge-test-server",
]

[workspace.package]
version = "0.3.1"
edition = "2021"
license = "FSL-1.1-ALv2"
rust-version = "1.91.1"
repository = "https://github.com/postrv/forgemax"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace.dependencies]
# Core runtime
deno_core = "0.385"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MCP protocol
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
schemars = "1.0"

# AST validation (oxc)
oxc_parser = "0.115"
oxc_ast = "0.115"
oxc_span = "0.115"
oxc_allocator = "0.115"

# Fuzzy matching
strsim = "0.11"

# Lock-free data structures
arc-swap = "1"

# File watching
notify = "7"

# Security / audit
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
forge-sandbox = { path = "crates/forge-sandbox", version = "0.3.1" }
forge-manifest = { path = "crates/forge-manifest", version = "0.3.1" }
forge-server = { path = "crates/forge-server", version = "0.3.1" }
forge-client = { path = "crates/forge-client", version = "0.3.1" }
forge-config = { path = "crates/forge-config", version = "0.3.1" }
forge-error = { path = "crates/forge-error", version = "0.3.1" }
forge-audit = { path = "crates/forge-audit", version = "0.3.1" }
