[package]
name = "forgemax"
description = "Forgemax Code Mode MCP Gateway - CLI entry point"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true
keywords = ["mcp", "mcp-gateway", "gateway", "ai", "code-mode"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "forgemax"
path = "src/main.rs"

[dependencies]
forge-server.workspace = true
forge-manifest.workspace = true
forge-sandbox.workspace = true
forge-client.workspace = true
forge-config.workspace = true
forge-error.workspace = true
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
strsim.workspace = true

[features]
default = ["worker-pool", "metrics", "config-watch"]
worker-pool = ["forge-sandbox/worker-pool"]
metrics = ["forge-sandbox/metrics"]
config-watch = ["forge-config/config-watch"]

[dev-dependencies]
forge-error.workspace = true
tempfile = "3"
serde_json.workspace = true
