[package]
name = "forge-config"
description = "Configuration loading for Forgemax Code Mode MCP Gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
thiserror.workspace = true
