[package]
name = "forge-config"
description = "Configuration loading for Forgemax Code Mode MCP Gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
thiserror.workspace = true
tracing.workspace = true

# File watching (optional, default off)
notify = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[features]
default = []
config-watch = ["dep:notify", "dep:tokio"]

[dev-dependencies]
temp-env = "0.3"
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
