[package]
name = "forge-error"
description = "Typed error types for Forge gateway dispatcher traits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
strsim.workspace = true
