[package]
name = "forge-sandbox-worker"
description = "Isolated V8 sandbox worker process for Forge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "forgemax-worker"
path = "src/main.rs"

[dependencies]
forge-sandbox.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
