[package]
name = "forge-sandbox"
description = "V8 sandbox for executing LLM-generated JavaScript via deno_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
deno_core.workspace = true
deno_error = "0.7"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
sha2.workspace = true
uuid.workspace = true
chrono.workspace = true
regex = "1"
percent-encoding = "2"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
temp-env = "0.3"
