[package]
name = "forge-sandbox"
description = "V8 sandbox for executing LLM-generated JavaScript via deno_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
deno_core.workspace = true
deno_error = "0.7"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
forge-error.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
sha2.workspace = true
uuid.workspace = true
chrono.workspace = true
regex = "1"
percent-encoding = "2"

# AST validator (optional, default on)
oxc_parser = { workspace = true, optional = true }
oxc_ast = { workspace = true, optional = true }
oxc_span = { workspace = true, optional = true }
oxc_allocator = { workspace = true, optional = true }

[features]
default = ["ast-validator"]
ast-validator = ["dep:oxc_parser", "dep:oxc_ast", "dep:oxc_span", "dep:oxc_allocator"]

[dev-dependencies]
tempfile = "3"
serial_test = "3"
temp-env = "0.3"
