[package]
name = "forge-server"
description = "MCP server exposing search() and execute() Code Mode tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
forge-sandbox.workspace = true
forge-manifest.workspace = true
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
schemars.workspace = true
async-trait.workspace = true
